--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(OpenGL)
 find_package(GLEW)
 
 include(FindPkgConfig)
-pkg_search_module(SDL2 REQUIRED sdl2)
+pkg_search_module(SDL2 REQUIRED)
 
 set(APP_NAME app)
 set(LIB_NAME harken)
@@ -13,9 +13,11 @@ add_subdirectory(${LIB_NAME})
 
 set(APP_SOURCES 
     main.cpp
-    sdl.cpp
 )
 
+include_directories(. ${SDL2_INCLUDE_DIRS})
+
 add_executable(${APP_NAME} ${APP_SOURCES})
-include_directories(${SDL2_INCLUDE_DIRS})
 target_link_libraries(${APP_NAME} ${LIB_NAME} ${OPENGL_LIBRARIES} ${GLEW_LIBRARY} ${SDL2_LIBRARIES})
+
+add_subdirectory(test)
