--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,10 +1,10 @@
+find_package(Boost COMPONENTS unit_test_framework REQUIRED)
+
 set(TEST_NAME test-all)
 set(TEST_SOURCES
     main.cpp
-    tester.cpp
-    
 )
 
 add_executable(${TEST_NAME} ${TEST_SOURCES})
-target_link_libraries(${TEST_NAME} ${LIB_NAME})
+target_link_libraries(${TEST_NAME} ${LIB_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
 
