Added basic framework for shaders.

--- a/src/harken/CMakeLists.txt
+++ b/src/harken/CMakeLists.txt
@@ -1,8 +1,11 @@
 include(FindPkgConfig)
-pkg_search_module(SDL2 REQUIRED)
+pkg_search_module(SDL2 REQUIRED sdl2)
 
 add_library(${LIB_NAME} STATIC
+    exception.cpp
     sdl.cpp
+    shader.cpp
+    shaderprogram.cpp
 )
 
 include_directories(${SDL2_INCLUDE_DIRS})
