--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(OpenGL)
 find_package(GLEW)
 
 include(FindPkgConfig)
-pkg_search_module(SDL2 REQUIRED)
+pkg_search_module(SDL2 REQUIRED sdl2)
 
 set(APP_NAME app)
 set(LIB_NAME harken)
@@ -15,8 +15,13 @@ set(APP_SOURCES
     main.cpp
 )
 
-include_directories(. ${SDL2_INCLUDE_DIRS})
+file(GLOB VERTEX_SHADERS "shaders/vertex/*.vert")
+file(GLOB FRAGMENT_SHADERS "shaders/fragment/*.frag")
 
+file(COPY ${VERTEX_SHADERS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY ${FRAGMENT_SHADERS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}) 
+
+include_directories(. ${SDL2_INCLUDE_DIRS})
 add_executable(${APP_NAME} ${APP_SOURCES})
 target_link_libraries(${APP_NAME} ${LIB_NAME} ${OPENGL_LIBRARIES} ${GLEW_LIBRARY} ${SDL2_LIBRARIES})
 
