Added handle classes for vertex array objects and vertex buffer objects.

--- a/src/harken/CMakeLists.txt
+++ b/src/harken/CMakeLists.txt
@@ -6,6 +6,8 @@ add_library(${LIB_NAME} STATIC
     sdl.cpp
     shader.cpp
     shaderprogram.cpp
+    vertexarrayobject.cpp
+    vertexbufferobject.cpp
 )
 
 include_directories(${SDL2_INCLUDE_DIRS})
