Renamed Harken sources.

--- a/src/harken/CMakeLists.txt
+++ b/src/harken/CMakeLists.txt
@@ -2,12 +2,12 @@ include(FindPkgConfig)
 pkg_search_module(SDL2 REQUIRED sdl2)
 
 add_library(${LIB_NAME} STATIC
-    exception.cpp
-    sdl.cpp
-    shader.cpp
-    shaderprogram.cpp
-    vertexarrayobject.cpp
-    vertexbufferobject.cpp
+    harken_exception.cpp
+    harken_sdl.cpp
+    harken_shader.cpp
+    harken_shaderprogram.cpp
+    harken_vertexarrayobject.cpp
+    harken_vertexbufferobject.cpp
 )
 
 include_directories(${SDL2_INCLUDE_DIRS})
