--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,10 +8,11 @@ pkg_search_module(SDL2 REQUIRED sdl2)
 
 set(APP_NAME app)
 set(LIB_NAME harken)
+set(LIB_INCLUDE_DIR ${LIB_NAME})
 
 add_subdirectory(${LIB_NAME})
 
-set(APP_SOURCES 
+set(APP_SOURCES
     main.cpp
 )
 
@@ -19,9 +20,9 @@ file(GLOB VERTEX_SHADERS "shaders/vertex/*.vert")
 file(GLOB FRAGMENT_SHADERS "shaders/fragment/*.frag")
 
 file(COPY ${VERTEX_SHADERS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-file(COPY ${FRAGMENT_SHADERS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}) 
+file(COPY ${FRAGMENT_SHADERS} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-include_directories(. ${SDL2_INCLUDE_DIRS})
+include_directories(${LIB_INCLUDE_DIR} ${SDL2_INCLUDE_DIRS})
 add_executable(${APP_NAME} ${APP_SOURCES})
 target_link_libraries(${APP_NAME} ${LIB_NAME} ${OPENGL_LIBRARIES} ${GLEW_LIBRARY} ${SDL2_LIBRARIES})
 
