Added matrix data accessor, matrix multiplication and Vector4 specialisation.

--- a/src/harken/CMakeLists.txt
+++ b/src/harken/CMakeLists.txt
@@ -3,6 +3,7 @@ pkg_search_module(SDL2 REQUIRED sdl2)
 
 add_library(${LIB_NAME} STATIC
     harken_exception.cpp
+    harken_glmath.cpp
     harken_sdl.cpp
     harken_shader.cpp
     harken_shaderprogram.cpp
